--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,8 +11,12 @@
 }
 
 body {
-    max-width: 1000px;
+    max-width: 80vw;
     margin: 0 auto;
+}
+
+nav {
+    margin-top: -2.4rem;
 }
 
 nav ul {
@@ -38,17 +42,20 @@ ul li a:hover {
     text-underline-offset: 0.25rem;
 }
 
- nav h1 {
+nav h1 {
     max-width: 70%;
     position: relative;
     left: 3rem;
     top: 3.3rem;
-    color: white;
     text-transform: uppercase;
     text-decoration-line: overline;
     font-size: 2rem;
-   
 }
+
+nav h1 a {
+    color: white;
+}
+
 .banner {
     background-image: url(./img/banner.jpg);
     height: 160px;
@@ -57,37 +64,44 @@ ul li a:hover {
 
 .container-pratos {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.container-pratos article:nth-child(3),  article:nth-child(6){
+    margin-right: 0;
 }
 
 .prato {
-    margin: 5px 5px 5px 0;
+    margin: 10px 15px 15px 0;
     text-align: center;
     padding: 20px 0 10px 0;
     background-color: #237280;
+    box-shadow: inset 0 3px 16px 0 rgb(207 255 255);
     color: white;
     border-radius: 5px;
 }
- .prato p.descricao {
+
+.prato .descricao p {
     text-align: justify;
     max-width: 18rem;
     padding: 0 2rem;
- }
- 
-  .prato img {
-     max-width: 16rem;
-     border-radius: 5px;
-     height: 200px;
-    }
-    
-.prato a  {
+}
+
+.prato img {
+    max-width: 16rem;
+    border-radius: 5px;
+    height: 200px;
+}
+
+.prato a {
     color: #fff;
 }
-#btn_prato{
+
+#btn_prato {
     margin: 10px 0;
 
 }
-.btn-comprar{
+
+.btn-comprar {
     margin: 4px auto;
     width: 10rem;
 
@@ -101,43 +115,55 @@ ul li a:hover {
 
 .btn-comprar:hover {
     background-color: #4fa8b3;
-    
+
 }
 
 
 /* Start Estilização da página pratos */
 
 
-.others, .pagina-prato h2 {
-    color:#27808b;
+.others,
+.pagina-prato h2 {
+    color: #27808b;
 }
+
 .pagina-prato {
-    padding-top: 20px;
+    margin-top: 10px;
+    height: 19rem;
+    padding: 10px;
+
+    background-color: #569ba521;
+    box-shadow: inset 0 3px 16px 0 rgb(159 182 182);
+    border-radius: 5px;
 }
-.pagina-prato a{
+
+.pagina-prato a {
     color: #fff;
 }
 
 .pagina-prato img {
     max-width: 15rem;
     border-radius: 5px;
-} 
+
+    box-shadow: inset 0 3px 16px 0 rgb(159, 182, 182);
+    
+}
 
 .pagina-prato div.descricao {
-    width: 22rem;
+    width: 16rem;
     text-align: justify;
-    
+
     position: relative;
-    left: 17rem;
-    bottom: 12rem;
+    left: 16rem;
+    bottom: 10rem;
 }
+
 
 em {
     text-decoration: underline #4fa7b2;
 }
 
-/* End pag-pratos */
-
+/* Footer */
 
 footer {
     background-color: #237280;
@@ -155,6 +181,50 @@ footer {
 
 }
 
+/* Formulário */
+#dados_formulario {
+    margin: 5rem auto;
+    color: #27808b;
+ }
+
+.footer-menu li:first-child {
+    display: inline-grid;
+    align-items: center;
+    text-align: right;
+    color: white;
+    font-weight: 600;
+}
+
+.form-footer {
+    margin-right: auto;
+}
+
+.form-footer input,
+button {
+    height: 1.5rem;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px 3px rgb(113 189 189);
+    border:none;
+    padding: 3px;
+
+}
+
+button {
+    width: 3rem;
+    color: #fff;
+    background-color: #27808b;    
+    display: inline-flex;
+    justify-content: center;
+    align-items: flex-start;
+
+    box-shadow: inset 0 3px 16px 0 rgb(159, 182, 182);
+    transition: opacity .2s ease-in;
+}
+
+ button:hover {
+    background-color: #237280 ;
+ }
+
 .autoral {
     text-align: center;
     opacity: 0.5;
@@ -164,14 +234,27 @@ footer {
 /* Media Query */
 
 @media (max-width: 420px) {
-    .container-pratos{
-        display: block;
+    body {
+        max-width: 100vw;
     }
+
+    nav {
+        margin: 0.4rem auto;
+    }
+
     nav h1 {
         left: 2rem;
         top: 0.01rem;
+    }
+
+    nav h1 a {
         color: #237280;
     }
+
+    .container-pratos {
+        display: block;
+    }
+
     .prato {
         margin: 5px auto;
     }
